--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,14 @@
 
 }
 
+.navbar form .input {
+  width: 100%;
+  padding: 0.6rem;
+  border: none;
+  border-radius:10px;
+
+}
+
 .footer{
   width: 100%;
   height: 10vh;
