--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+a{
+  color: #fff;
+  text-decoration: none;
+}
+
 .navbar{
   width: 100%;
   height: 10vh;
@@ -12,6 +17,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  position: sticky;
 
 }
 
@@ -56,7 +62,8 @@ button{
   padding: 10px;
   background: black;
   color: white;
-  width: 100%;
+  width: 300px;
+  font-size: 20px;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -69,4 +76,13 @@ img{
 
 img:hover{
   transform: scale(1.1);
+}
+
+.favorites{
+  min-height: 80vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  text-align: center;
 }
