--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,30 @@ img:hover{
   justify-items: center;
   text-align: center;
 }
+
+.book-details{
+  min-height: 80vh;
+  width: 100%;
+  display: flex;  
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 10px;
+  gap: 25px;
+}
+
+.book-image{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+}
+
+.book-description{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 5px;
+  padding: 2rem;  
+
+}
